1st cut at 4th wizard screen